--- a/styles/architect.css
+++ b/styles/architect.css
@@ -63,68 +63,123 @@ nav li a {
     padding: 20px 25px;
     cursor: pointer;
 }
-.banner img{
+
+.banner img {
     margin-top: 20px;
     width: 100%;
 }
 
-main{
+main {
     max-width: 1440px;
     margin: 70px auto;
 }
-.teams-container{
+
+.teams-container {
     display: flex;
     align-items: center;
 }
 
-.teams-img-container{
+.teams-img-container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 1.5rem;
 }
-.teams-content{
+
+.teams-content {
     padding-right: 70px;
-    padding-left: 70px ;
+    padding-left: 70px;
 }
-.teams-title{
+
+.teams-title {
     font-size: 2.8rem;
 }
-.teams-title .quick-list{
+
+.teams-title .quick-list {
     font-weight: 500;
 }
-.teams-title .text-features{
+
+.teams-title .text-features {
     color: #FF900E;
     font-weight: 700;
 }
 
 
+.facts-card-container {
+    display: flex;
+    justify-content: space-around;
+}
+
+.facts-card-container .card {
+    border-radius: 8px;
+    border: 1px solid #FF900E;
+    text-align: center;
+    padding: 30px;
+}
+
+.facts-card-container .card-stats {
+    font-size: 2.8rem;
+    color: #424242;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.facts-card-container .card-title {
+    font-weight: 600;
+    font-size: 1.25rem;
+    margin-top: 5px;
+}
+.sponsors{
+    text-align: center;
+}
+.sponsors-img-container{
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 20px;
+}
+.sponsors-img-container img{
+    width: 165px;
+}
+
 /* Responsive Media Query */
 /* mobile device */
 @media screen and (max-width: 576px) {
-    header{
+    header {
         padding: 20px;
     }
-    nav, .teams-container {
-        flex-direction: column-reverse;
+
+    nav,
+    .teams-container,
+    .facts-card-container,
+    .sponsors-img-container {
+        flex-direction: column;
     }
-    .teams-img-container{
-        grid-template-columns: repeat(1, 1fr);
+
+    .teams-img-container {
+        grid-template-columns: 1fr;
     }
-    .teams-content{
+
+    .teams-content .facts-card-container {
         padding-left: 20px;
         padding-right: 20px;
-        margin-bottom: 20px;
+    }
+    .facts-card-container{
+        gap: 10px;
     }
 
 }
 
 /* tablet or medium device */
 
-@media screen and (min-width: 576px) and (max-width: 960px){
-    header{
+@media screen and (min-width: 576px) and (max-width: 960px) {
+    header {
         padding: 50px;
     }
-    nav, .teams-container{
+
+    nav,
+    .teams-container,
+    .sponsors-img-container{
         flex-direction: column;
     }
 }
